src/test/deca/context/invalid/created/rule2.5/2.5class.deca
// Résultat erreur:
//    19:10
//    type de champ non conforme lors de la redéfinition (règle 2.7)
//
// Description:
//    Tests de programme incorrect contextuellement (déclaration de champ invalide)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class SuperClasse {
    int monChamp;
}

class SousClasse extends SuperClasse {
    float monChamp;
}
